APPDESCRIP-4 Fix an application dependency definition issue (#6)