@@ -2,6 +2,7 @@ package org.folio.app.generator.validator;
 
 import static java.lang.String.format;
 import static java.util.Collections.emptyList;
+import static java.util.stream.Collectors.toList;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -11,11 +12,11 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.logging.Log;
 import org.apache.maven.project.MavenProject;
 import org.folio.app.generator.model.ApplicationDescriptorTemplate;
 import org.folio.app.generator.model.Dependency;
+import org.semver4j.RangesListFactory;
 import org.semver4j.Semver;
 import org.springframework.stereotype.Component;
 
@@ -31,14 +32,15 @@ public class ApplicationDependencyValidator {
    * Validates that all dependencies satisfies specific release and declared in a right way.
    *
    * @param template - {@link ApplicationDescriptorTemplate} to analyze
-   * @throws MojoExecutionException - if any validation error occurred
    */
-  public void validateDependencies(ApplicationDescriptorTemplate template) throws MojoExecutionException {
+  public void validateDependencies(ApplicationDescriptorTemplate template) {
     var projectVersion = validateAndGetProjectVersion(template);
-    var errors = Stream.of(template.getModules(), template.getUiModules(), template.getDependencies())
-      .map(dependencies -> getValidationErrors(projectVersion, dependencies))
+    var errors = Stream.of(template.getModules(), template.getUiModules())
+      .map(moduleDependencies -> validateModules(projectVersion, moduleDependencies))
       .flatMap(Collection::stream)
-      .toList();
+      .collect(toList());
+
+    errors.addAll(validateApplicationDependencies(template.getDependencies()));
 
     if (!errors.isEmpty()) {
       var errorsString = errors.stream().collect(Collectors.joining("\n  * ", "  * ", ""));
@@ -46,7 +48,7 @@ public class ApplicationDependencyValidator {
     }
   }
 
-  private List<String> getValidationErrors(Semver projectVersion, List<Dependency> dependencies) {
+  private List<String> validateModules(Semver projectVersion, List<Dependency> dependencies) {
     if (dependencies == null || dependencies.isEmpty()) {
       return emptyList();
     }
@@ -57,7 +59,7 @@ public class ApplicationDependencyValidator {
 
     for (int i = 0; i < dependencies.size(); i++) {
       var dependency = dependencies.get(i);
-      var validationError = validateDependency(dependency, i, isProjectHasFixVersion);
+      var validationError = validateModuleDefinition(dependency, i, isProjectHasFixVersion);
       if (validationError != null) {
         errors.add(validationError);
       }
@@ -66,10 +68,10 @@ public class ApplicationDependencyValidator {
     return errors;
   }
 
-  private String validateDependency(Dependency dependency, int i, boolean isProjectHasFixVersion) {
+  private String validateModuleDefinition(Dependency dependency, int idx, boolean isProjectHasFixVersion) {
     var name = dependency.getName();
     if (StringUtils.isBlank(name)) {
-      return "Dependency name cannot be empty at index: " + i;
+      return "Module name cannot be empty at index: " + idx;
     }
 
     var version = dependency.getVersion();
@@ -77,27 +79,55 @@ public class ApplicationDependencyValidator {
 
     if (parsedVersion == null) {
       if (!reservedVersionKeywords.contains(version)) {
-        return format("Dependency '%s' version '%s' must satisfy semver", name, version);
+        return format("Module '%s' version '%s' must satisfy semver", name, version);
       }
 
       if (isProjectHasFixVersion) {
-        return format("Dependency '%s' version '%s' must be stable for a stable release", name, version);
+        return format("Module '%s' version '%s' must be stable for a stable release", name, version);
       }
     }
 
     if (isProjectHasFixVersion && !parsedVersion.getPreRelease().isEmpty()) {
-      return format("Dependency '%s' version '%s' must be stable for a stable release", name, version);
+      return format("Module '%s' version '%s' must be stable for a stable release", name, version);
     }
 
     return null;
   }
 
-  private Semver validateAndGetProjectVersion(ApplicationDescriptorTemplate template) throws MojoExecutionException {
+  private List<String> validateApplicationDependencies(List<Dependency> dependencies) {
+    var errors = new ArrayList<String>();
+    for (int i = 0; i < dependencies.size(); i++) {
+      var dependency = dependencies.get(i);
+      var validationError = validateApplicationDependency(i, dependency);
+      if (validationError != null) {
+        errors.add(validationError);
+      }
+    }
+
+    return errors;
+  }
+
+  private String validateApplicationDependency(int idx, Dependency dependency) {
+    var name = dependency.getName();
+    if (StringUtils.isBlank(name)) {
+      return "Module name cannot be empty at index: " + idx;
+    }
+
+    var version = dependency.getVersion();
+    var rangesList = RangesListFactory.create(version).get();
+    if (rangesList.isEmpty()) {
+      return format("Application dependency '%s' version '%s' must satisfy semver range", name, version);
+    }
+
+    return null;
+  }
+
+  private Semver validateAndGetProjectVersion(ApplicationDescriptorTemplate template) {
     var templateVersion = template.getVersion();
     if (templateVersion != null) {
       var parsedTemplateVersion = Semver.parse(templateVersion);
       if (parsedTemplateVersion == null) {
-        throw new MojoExecutionException("Template version must satisfy semver: " + templateVersion);
+        throw new IllegalArgumentException("Template version must satisfy semver: " + templateVersion);
       }
 
       return parsedTemplateVersion;
@@ -106,7 +136,7 @@ public class ApplicationDependencyValidator {
     var projectVersion = mavenProject.getVersion();
     var parsedProjectVersion = Semver.parse(projectVersion);
     if (parsedProjectVersion == null) {
-      throw new MojoExecutionException("Project version must satisfy semver: " + projectVersion);
+      throw new IllegalArgumentException("Project version must satisfy semver: " + projectVersion);
     }
 
     return parsedProjectVersion;
